# texhub-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile-bulleye  Dockerfile-test  README.md  TODO.md  build.rs  log4rs.yaml  settings-production.toml  settings.toml
.agent/skills/webapp-testing/: .openskills.json
.cargo/: config.toml
.github/workflows/: deploy-k8s-legacy.yml  deploy-k8s.yml
ci/: gcc-so-test.dockerfile  musl-so-test.dockerfile
docs/: api.md  meilisearch.md
docs/api/appconf/: appconf.md
docs/api/project/: clone-proj.md  proj.md
docs/api/project/history/: hist.md
docs/api/project/queue/: queue.md
docs/db/backup/: Dockerfile  backup.sh
docs/deploy/deployment/: texhub-server-service.yaml
docs/deploy/ingressroute/: texhub-web-route.yaml
docs/deploy/pv/: nfs-texhub-server-pv.yaml
docs/deploy/pvc/: texhub-server-service-pv-claim.yaml
docs/deploy/service/: tex-service.yaml
locales/: en.yml  zh-CN.yml
scripts/app/: build-docker.sh  build-gcc-so-docker.sh  build-musl-so-docker.sh  run-app.sh
scripts/diesel/: diesel-tex-model.sh  diesel-tex-schema.sh  diesel-tex.toml
scripts/shell/: entrypoint.sh
scripts/shell/database/: backup-database-cv.sh  backup-database-texhub.sh
scripts/sql/: tex-20241007134426.sql
src/: build.rs  main-test.rs  main.rs
src/common/: database.rs  logging.rs  mod.rs  request_context.rs
src/common/interop/: mod.rs  synctex.rs
src/common/middleware/: mod.rs  request_id_middleware.rs
src/common/proj/: proj_util.rs
src/common/types/: compile_status.rs  mod.rs
src/common/utils/: mod.rs  rest.rs  url_parse.rs
src/common/zip/: compress.rs  decompress.rs
src/controller/: mod.rs
src/controller/appconf/: appconf_controller.rs  appconf_inner_controller.rs  mod.rs
src/controller/collar/: collar_controller.rs  mod.rs
src/controller/doc/: doc_controller.rs
src/controller/file/: file_controller.rs  file_version_controller.rs  mod.rs
src/controller/health/: health_controller.rs
src/controller/profile/: mod.rs  profile_controller.rs
src/controller/project/: mod.rs  proj_controller.rs  proj_event_handler.rs  project_controller.rs  snippet_controller.rs
src/controller/project/proj/: mod.rs  proj_controller.rs  proj_event_handler.rs  proj_inner_controller.rs
src/controller/project/queue/: mod.rs  proj_queue_controller.rs
src/controller/project/share/: mod.rs  proj_share_controller.rs
src/controller/template/: template_controller.rs
src/controller/ws/: ws_handler.rs
src/model/: mod.rs
src/model/app/: app_context.rs  mod.rs  tex_file_params.rs  tpl_params.rs
src/model/app/conf/: github_token_query.rs  github_token_req.rs  mod.rs
src/model/dict/: collar_status.rs  mod.rs  proj_source_type.rs  role_type.rs  tex_file_compile_status.rs
src/model/diesel/: mod.rs
src/model/diesel/custom/: mod.rs
src/model/diesel/custom/conf/: mod.rs  user_conf_add.rs
src/model/diesel/custom/doc/: mod.rs  tex_doc_add.rs
src/model/diesel/custom/file/: file_add.rs  file_tree.rs  file_ver_add.rs  mod.rs  search_file.rs  search_file_resp.rs
src/model/diesel/custom/project/: mod.rs  proj_type.rs  tex_proj_editor_add.rs  tex_project_add.rs  tex_project_cache.rs
src/model/diesel/tex/: custom_tex_models.rs  mod.rs  tex_models.rs  tex_schema.rs
src/model/error/: mod.rs  texhub_error.rs
src/model/request/: mod.rs
src/model/request/doc/: mod.rs  tex_doc_req.rs
src/model/request/file/: file_add_req.rs  file_initial_req.rs  file_rename.rs  mod.rs
src/model/request/file/add/: file_add_req.rs  file_add_ver_req.rs  mod.rs
src/model/request/file/del/: file_del.rs  mod.rs
src/model/request/file/edit/: mod.rs  move_file_req.rs
src/model/request/file/query/: download_file_query.rs  file_code_params.rs  file_query_params.rs  main_file_params.rs  mod.rs  pdf_partial.rs  pdf_preview_req.rs  pdf_preview_sign.rs  sub_file_query_params.rs
src/model/request/profile/: mod.rs  profile_active_req.rs
src/model/request/project/: mod.rs  tex_compile_project_req.rs  tex_compile_queue_log.rs  tex_compile_queue_req.rs  tex_compile_queue_status.rs  tex_del_project_req.rs  tex_join_project_req.rs  tex_project_req.rs
src/model/request/project/add/: copy_proj_req.rs  mod.rs  tex_file_idx_req.rs  tex_folder_req.rs  tex_project_req.rs  tex_project_tpl_req.rs
src/model/request/project/del/: del_folder_req.rs  mod.rs
src/model/request/project/edit/: archive_proj_req.rs  edit_compile_queue_req.rs  edit_proj_folder.rs  edit_proj_nickname.rs  edit_proj_req.rs  mod.rs  rename_proj_folder.rs  trash_proj_req.rs
src/model/request/snippet/: mod.rs
src/model/response/: mod.rs
src/model/response/file/: file_tree_resp.rs  folder_tree_resp.rs  mod.rs  tex_file_resp.rs  ws_file_detail.rs
src/model/response/project/: compile_queue_add_resp.rs  compile_resp.rs  latest_compile.rs  mod.rs  pdf_pos_resp.rs  proj_resp.rs  src_pos_resp.rs  tex_proj_resp.rs  tex_project_cache_resp.rs
src/model/response/tpl/: mod.rs  tex_tpl_resp.rs
src/monitor/: health_controller.rs
src/net/: mod.rs  render_client.rs  y_websocket_client.rs
src/service/: mod.rs
src/service/config/: mod.rs  user_config_service.rs
src/service/doc/: doc_service.rs  mod.rs
src/service/file/: file_name_validator.rs  file_service.rs  file_version_service.rs  mod.rs
src/service/file/spec/: file_spec.rs  mod.rs
src/service/global/: mod.rs
src/service/global/proj/: proj_util.rs
src/service/infra/: infra_service.rs  mod.rs  user_service.rs
src/service/project/: mod.rs  project_editor_service.rs  project_folder_map_service.rs  project_folder_service.rs  project_queue_service.rs  project_service.rs  snippet_service.rs
src/service/project/compile/: mod.rs  project_compile_service.rs
src/service/project/eden/: external_app.rs  mod.rs  proj.rs
src/service/project/proj/: mod.rs  project_service.rs  synctex_service.rs
src/service/project/share/: share_service.rs
src/service/project/spec/: mod.rs  proj_spec.rs
src/service/pub/proj/: mod.rs  proj_util.rs
src/service/tpl/: template_service.rs
src/tests/: mod.rs  test_proj.rs
(+50 files in other folders)
