[package]
name = "texhub-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.64", features = ["derive"] }
serde_json = "1.0.64"
rust_wheel = { git = "https://github.com/jiangxiaoqiang/rust_wheel.git", branch = "diesel2.0", features = ["model","common","rwconfig"]}
tokio-tungstenite = "0.20.0"
tokio = { version = "1.17.0", features = ["full"] }
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
futures-channel = "0.3.28"
log4rs = "1.2.0"
log = "0.4.0"
diesel = { version = "2.0.4", features = ["postgres","64-column-tables","chrono","serde_json"] }
openssl = "*"
openssl-probe = "0.1.2"
uuid = {version = "1.4.1",features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}