[package]
name = "texhub-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
validator = { version = "0.16.1", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rust_wheel = { git = "https://github.com/jiangxiaoqiang/rust_wheel.git", branch = "main", features = [
    "model",
    "common",
    "rwconfig",
    "texhub"
] }
rustls = { version = "0.23", features = ["ring","logging","tls12"], default-features = false }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tokio = { version = "1.41.1", features = ["full"] }
futures-util = { version = "0.3.28", default-features = false, features = [
    "sink",
    "std",
] }
futures-channel = "0.3.28"
log4rs = "1.3.0"
log = "0.4.22"
diesel = { version = "2.3.4", features = [
    "postgres",
    "64-column-tables",
    "chrono",
    "serde_json",
] }
openssl = "*"
openssl-probe = "0.1.2"
uuid = { version = "1.4.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
chrono = { version = "0.4.26" }
reqwest = { version = "0.11.18", features = ["json", "stream","blocking","rustls-tls"] }
futures = "0.3"
actix-web = "4.12.1"
actix-web-validator = "5.0.1"
actix-rt = "2.9.0"
actix-multipart = "0.6.1"
actix-files = "0.6.2"
flate2 = "1.0"
regex = "1.5"
libz-sys = { version = "1.1.0", default-features = false, features = ["libc"] }
jemallocator = "0.5.4"
jemalloc-ctl = "0.5.4"
prometheus = "0.13.3"
meilisearch-sdk = "0.24.2"
redlock = "2.0.0"
redis = "0.27.2"
zip = "2.2.0"
mime = "0.3.17"
rust-i18n = "3"
ring = "0.16.20"
thiserror = "1.0.61"
git2 = "0.19.0"
octocrab = "0.41.0"

[dependencies.jemalloc-sys]
version = "0.5.4"
features = ["stats", "profiling", "unprefixed_malloc_on_supported_platforms"]

[build-dependencies]
bindgen = "0.65.1"

[profile.release]
# https://stackoverflow.com/questions/29008127/why-are-rust-executables-so-huge
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
debug = false
