[package]
name = "texhub-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
validator = { version = "0.16.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rust_wheel = { version = "0.1.14", features = [
    "model",
    "common",
    "rwconfig",
    "texhub"
] }
rustls = { version = "0.23", features = ["ring","logging","tls12"], default-features = false }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tokio = { version = "1.52.3", features = ["full"] }
futures-util = { version = "0.3.32", default-features = false, features = [
    "sink",
    "std",
] }
futures-channel = "0.3.32"
log4rs = "1.4.0"
log = "0.4.30"
diesel = { version = "2.3.9", features = [
    "postgres",
    "64-column-tables",
    "chrono",
    "serde_json",
] }
openssl = { version = "0.10", features = ["vendored"] }
openssl-probe = "0.1.6"
uuid = { version = "1.23.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
chrono = { version = "0.4.44" }
reqwest = { version = "0.11.27", features = ["json", "stream","blocking","rustls-tls"] }
futures = "0.3"
actix-web = "4.13.0"
actix-web-validator = "5.0.1"
actix-rt = "2.11.0"
actix-multipart = "0.6.2"
actix-files = "0.6.10"
flate2 = "1.1"
regex = "1.12"
libz-sys = { version = "1.1.28", default-features = false, features = ["libc"] }
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.7.0"
tikv-jemalloc-ctl = "0.7.0"
prometheus = "0.13.4"
meilisearch-sdk = "0.24.3"
redis = "1.2.1"
zip = "8.6.0"
mime = "0.3.17"
rust-i18n = "3"
ring = "0.16.20"
thiserror = "1.0.69"
git2 = "0.21.0"
octocrab = "0.41.2"

[dependencies.tikv-jemalloc-sys]
version = "0.7"
features = ["stats", "profiling", "unprefixed_malloc_on_supported_platforms"]

[build-dependencies]
bindgen = "0.65.1"

[profile.release]
# https://stackoverflow.com/questions/29008127/why-are-rust-executables-so-huge
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
debug = false
